k8s/deployemnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shipa
  name: shipa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipa
  strategy: {}
  template:
    metadata:
      labels:
        app: shipa
    spec:
      containers:
      - image: ahmad75/sipha:TAAGG
        name: shipa-app
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     memory: "200Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "2Gi"
        #     cpu: "1"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /heath-check
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /heath-check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: my-registry-secret
