k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shipa
  name: shipa
  namespace: default
spec:
  ports:
  - name: targetport
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: shipa
  type: ClusterIP
